# number-guess-game

./: .ebignore  Dockerfile  LICENSE.md  README.md  app.py  pyproject.toml
.ebextensions/: 01-autoscaling.config
src/streamlit_app/: __init__.py
