[project]
name = "streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "streamlit>=1.40.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
